--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,17 @@
 name = "utf8-bytes"
 version = "0.1.0"
 edition = "2024"
+description = "bytes::Bytes, but UTF-8"
+license = "Apache-2.0 OR MIT"
+repository = "https://github.com/aatifsyed/utf8-bytes"
+homepage = "https://crates.io/crates/utf8-bytes"
+documentation = "https://docs.rs/utf8-bytes"
+keywords = [
+    "data-structures",
+    "network-programming",
+    "memory-management",
+    "concurrency",
+]
 
 [dependencies]
 bytes = "1.10.1"
